remove icon and add paragraph

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,6 +30,7 @@ import Layout from "../layouts/Layout.astro";
           }
         </p>
   
+        <p class="mb-5 text-lg">اتمني الكل يدخل الجروب . والدال علي الخير كفاعله . ♥️🌹</p>
         <a class="font-bold flex items-center gap-3 bg-orange-600 rounded-lg px-7 py-3 shadow-lg hover:bg-orange-500 transition-colors duration-300 active:bg-orange-400" href="https://chat.whatsapp.com/CQ8RXh9IwON5FJxZXbD2Na">
           الانضمام الى المجموعة
           <img class="w-10 h-10" src="/whatsapp-icon.svg" />
