--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import Layout from "../layouts/Layout.astro";
 <Layout title="Welcome to Astro.">
   <main dir="rtl">
     <div class="min-h-screen flex flex-col relative items-center">
-      <div class="z-20 bg-black/60 text-white backdrop-blur-sm px-5 py-10 rounded-2xl mx-5 max-w-3xl my-5 flex-grow flex justify-center items-center flex-col">
+      <div class="z-20 bg-black/60 text-white px-5 py-10 rounded-2xl mx-5 max-w-3xl my-5 flex-grow flex justify-center items-center flex-col">
         <h1 class="text-3xl text-center">السنن المهجورة</h1>
         <p class="my-7 leading-[2.3] text-lg">
           {
